--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 <li><a href="https://russianhackers.org" class="nav-link">Хакатоны</a></li>
                 <li><a href="https://news.russianhackers.org" class="nav-link">Новости</a></li>
                 <li><a href="https://about.russianhackers.org" class="nav-link">О Нас</a></li>
+                <a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f" class="btn btn-primary">Попробовать!</a></p>
+            </div>
               </ul>
             </nav>
           </div>
@@ -87,6 +89,7 @@
             <div class="intro-text">
               <h1>Найди Хакатон <span class="d-md-block">В Яндекс.Станции</span></h1>
               <p class="mb-4">Russian Hackers сделали навык Алисы, где ты можешь найти хакатон в своем городе
+                <p><a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f" class="btn btn-primary">Попробовать!</a></p>
             </div>
           </div>
           <div class="col-md-5 align-self-end text-center text-md-right">
