--- a/single.html
+++ b/single.html
@@ -326,14 +326,18 @@
           </div>
           <div class="col-md-3">
             <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-            <form action="#" method="post" class="footer-subscribe">
+            <div class="ml-form-embed"
+              data-account="1112034:x2t8a0e8o2"
+              data-form="1809162:p8v0z7">
+            </div>
+            <!-- <form action="#" method="post" class="footer-subscribe">
               <div class="input-group mb-3">
                 <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
                 <div class="input-group-append">
                   <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>
                 </div>
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
         <div class="row pt-5 mt-5 text-center">
@@ -367,6 +371,17 @@
 
   
   <script src="js/main.js"></script>
+  <!-- MailerLite Universal -->
+  <script>
+    (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+    var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+    f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+    var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+    _.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+
+    var ml_account = ml('accounts', '1112034', 'x2t8a0e8o2', 'load');
+  </script>
+<!-- End MailerLite Universal -->
 
   
   </body>
