--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     </div>
    
     
-    <header class="site-navbar js-sticky-header site-navbar-target" role="banner" >
+    <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
 
       <div class="container">
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
             <a href="https://russianhackers.org">
-              <img src="images/Стикер_2.png" height="100" >
+              <img src="images/Стикер_2.png" height="60" id="giga">
             </a>
             <!-- <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Russian Hackers<span class="text-primary"></a></h1> -->
           </div>
@@ -67,7 +67,7 @@
                 <li><a href="https://russianhackers.org" class="nav-link">Хакатоны</a></li>
                 <li><a href="https://news.russianhackers.org" class="nav-link">Новости</a></li>
                 <li><a href="https://about.russianhackers.org" class="nav-link">О Нас</a></li>
-                <a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f" class="btn btn-primary" id="giga">Попробовать!</a></p>
+                <a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f" class="btn btn-primary">Попробовать!</a></p>
             </div>
               </ul>
             </nav>
