--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     </div>
    
     
-    <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
+    <header class="site-navbar js-sticky-header site-navbar-target" role="banner" id="giga">
 
       <div class="container">
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
             <a href="https://russianhackers.org">
-              <img src="images/Стикер_2.png" height="60" id="giga">
+              <img src="images/Стикер_2.png" height="60">
             </a>
             <!-- <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Russian Hackers<span class="text-primary"></a></h1> -->
           </div>
