--- a/index.html
+++ b/index.html
@@ -209,7 +209,9 @@
           <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="">
             <div class="trainer">
               <figure>
-              <img src="images/dogger_trainer_1.jpg" alt="Image" class="img-fluid">
+              <a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f">
+                <img src="images/dogger_trainer_1.jpg" alt="Image" class="img-fluid">
+              </a>
               </figure>
               <div class="px-md-3">
                 <h3>Активируй навык "Поиск Хакатона"</h3>
@@ -220,7 +222,9 @@
           <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="trainer">
               <figure>
-              <img src="images/dogger_trainer_2.jpg" alt="Image" class="img-fluid">
+              <a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f">
+                <img src="images/dogger_trainer_2.jpg" alt="Image" class="img-fluid">
+              </a>
               </figure>
               <div class="px-md-3">
                 <h3>Попроси найти хакатон</h3>
@@ -237,7 +241,9 @@
           <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up"  data-aos-delay="200">
             <div class="trainer">
               <figure>
-              <img src="images/dogger_trainer_3.jpg" alt="Image" class="img-fluid">
+              <a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f">
+                <img src="images/dogger_trainer_3.jpg" alt="Image" class="img-fluid">
+              </a>
               </figure>
               <div class="px-md-3">
                 <h3>Ищи хакатоны по городам и дате</h3>
