--- a/index.html
+++ b/index.html
@@ -227,13 +227,8 @@
               </a>
               </figure>
               <div class="px-md-3">
-                <h3>Попроси найти хакатон</h3>
-                <p>и сохрани его в избранное</p>
-                <!-- <ul class="ul-social-circle">
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                </ul> -->
+                <h3>Попроси найти хакатон. Мы подскажем куда сходить</h3>
+                <p>Сохрани хакатон в избранное, а также попади сразу на его сайт</p>
               </div>
             </div>
           </div>
@@ -248,11 +243,6 @@
               <div class="px-md-3">
                 <h3>Ищи хакатоны по городам и дате</h3>
                 <p>Мы найдем ближайших хакатон, на который ты сходишь</p>
-                <!-- <ul class="ul-social-circle">
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                </ul> -->
               </div>
             </div>
           </div>
