--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                 <li><a href="https://russianhackers.org" class="nav-link">Хакатоны</a></li>
                 <li><a href="https://news.russianhackers.org" class="nav-link">Новости</a></li>
                 <li><a href="https://about.russianhackers.org" class="nav-link">О Нас</a></li>
+                <li><a href="http://l.rhck.me/alicefeedback" class="nav-link">Написать обратную связь о навыке</a></li>
+
+                
                 <a href="https://alice.ya.ru/s/56f893be-323b-494f-abe2-adc16265ec3f" class="btn btn-primary">Попробовать!</a></p>
             </div>
               </ul>
